branches/allen/generated/LittleParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 src/Little.g 2011-09-20 02:11:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class LittleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "STRINGLITERAL", "INTLITERAL", "FLOATLITERAL", "KEYWORD", "COMMENT", "WS", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'", "':='", "';'", "'FLOAT'", "'INT'", "'VOID'", "','", "'FUNCTION'", "'('", "')'", "'READ'", "'WRITE'", "'RETURN'", "'+'", "'-'", "'*'", "'/'", "'IF'", "'THEN'", "'ELSE'", "'ENDIF'", "'<'", "'>'", "'='", "'!='", "'DO'", "'WHILE'"
    };
    public static final int EOF=-1;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int IDENTIFIER=4;
    public static final int STRINGLITERAL=5;
    public static final int INTLITERAL=6;
    public static final int FLOATLITERAL=7;
    public static final int KEYWORD=8;
    public static final int COMMENT=9;
    public static final int WS=10;

    // delegates
    // delegators


        public LittleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LittleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[62+1];
             
             
        }
        

    public String[] getTokenNames() { return LittleParser.tokenNames; }
    public String getGrammarFileName() { return "src/Little.g"; }



    // $ANTLR start "program"
    // src/Little.g:10:1: program : 'PROGRAM' id 'BEGIN' pgm_body 'END' ;
    public final void program() throws RecognitionException {
        int program_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }
            // src/Little.g:11:2: ( 'PROGRAM' id 'BEGIN' pgm_body 'END' )
            // src/Little.g:11:4: 'PROGRAM' id 'BEGIN' pgm_body 'END'
            {
            if ( state.backtracking==0 ) {
              System.out.println("program");
            }
            match(input,11,FOLLOW_11_in_program45); if (state.failed) return ;
            pushFollow(FOLLOW_id_in_program47);
            id();

            state._fsp--;
            if (state.failed) return ;
            match(input,12,FOLLOW_12_in_program49); if (state.failed) return ;
            pushFollow(FOLLOW_pgm_body_in_program51);
            pgm_body();

            state._fsp--;
            if (state.failed) return ;
            match(input,13,FOLLOW_13_in_program53); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "id"
    // src/Little.g:15:1: id : IDENTIFIER ;
    public final void id() throws RecognitionException {
        int id_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }
            // src/Little.g:16:2: ( IDENTIFIER )
            // src/Little.g:16:4: IDENTIFIER
            {
            if ( state.backtracking==0 ) {
              System.out.println("id");
            }
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id71); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 2, id_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "id"


    // $ANTLR start "pgm_body"
    // src/Little.g:20:1: pgm_body : decl func_declarations ;
    public final void pgm_body() throws RecognitionException {
        int pgm_body_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }
            // src/Little.g:21:2: ( decl func_declarations )
            // src/Little.g:21:4: decl func_declarations
            {
            if ( state.backtracking==0 ) {
              System.out.println("pgm_body");
            }
            pushFollow(FOLLOW_decl_in_pgm_body86);
            decl();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_func_declarations_in_pgm_body88);
            func_declarations();

            state._fsp--;
            if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 3, pgm_body_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "pgm_body"


    // $ANTLR start "decl"
    // src/Little.g:25:1: decl : ( var_decl_list | string_decl_list )* ;
    public final void decl() throws RecognitionException {
        int decl_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }
            // src/Little.g:26:2: ( ( var_decl_list | string_decl_list )* )
            // src/Little.g:26:4: ( var_decl_list | string_decl_list )*
            {
            if ( state.backtracking==0 ) {
              System.out.println("decl");
            }
            // src/Little.g:27:3: ( var_decl_list | string_decl_list )*
            loop1:
            do {
                int alt1=3;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // src/Little.g:27:4: var_decl_list
            	    {
            	    pushFollow(FOLLOW_var_decl_list_in_decl105);
            	    var_decl_list();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // src/Little.g:27:20: string_decl_list
            	    {
            	    pushFollow(FOLLOW_string_decl_list_in_decl109);
            	    string_decl_list();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 4, decl_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "decl"


    // $ANTLR start "string_decl_list"
    // src/Little.g:31:1: string_decl_list : ( string_decl )+ ;
    public final void string_decl_list() throws RecognitionException {
        int string_decl_list_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }
            // src/Little.g:32:2: ( ( string_decl )+ )
            // src/Little.g:32:4: ( string_decl )+
            {
            if ( state.backtracking==0 ) {
              System.out.println("string_decl_list");
            }
            // src/Little.g:33:3: ( string_decl )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // src/Little.g:33:4: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list130);
            	    string_decl();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 5, string_decl_list_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "string_decl_list"


    // $ANTLR start "string_decl"
    // src/Little.g:35:1: string_decl : 'STRING' id ':=' STRINGLITERAL ';' ;
    public final void string_decl() throws RecognitionException {
        int string_decl_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return ; }
            // src/Little.g:36:2: ( 'STRING' id ':=' STRINGLITERAL ';' )
            // src/Little.g:36:4: 'STRING' id ':=' STRINGLITERAL ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("string_decl");
            }
            match(input,14,FOLLOW_14_in_string_decl146); if (state.failed) return ;
            pushFollow(FOLLOW_id_in_string_decl148);
            id();

            state._fsp--;
            if (state.failed) return ;
            match(input,15,FOLLOW_15_in_string_decl150); if (state.failed) return ;
            match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_string_decl152); if (state.failed) return ;
            match(input,16,FOLLOW_16_in_string_decl154); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 6, string_decl_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "string_decl"


    // $ANTLR start "var_decl_list"
    // src/Little.g:41:1: var_decl_list : ( var_decl )+ ;
    public final void var_decl_list() throws RecognitionException {
        int var_decl_list_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return ; }
            // src/Little.g:42:2: ( ( var_decl )+ )
            // src/Little.g:42:4: ( var_decl )+
            {
            if ( state.backtracking==0 ) {
              System.out.println("var_decl_list");
            }
            // src/Little.g:43:3: ( var_decl )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // src/Little.g:43:4: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list172);
            	    var_decl();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 7, var_decl_list_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "var_decl_list"


    // $ANTLR start "var_decl"
    // src/Little.g:46:1: var_decl : var_type id_list ';' ;
    public final void var_decl() throws RecognitionException {
        int var_decl_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return ; }
            // src/Little.g:47:2: ( var_type id_list ';' )
            // src/Little.g:47:4: var_type id_list ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("var_decl");
            }
            pushFollow(FOLLOW_var_type_in_var_decl190);
            var_type();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_id_list_in_var_decl192);
            id_list();

            state._fsp--;
            if (state.failed) return ;
            match(input,16,FOLLOW_16_in_var_decl194); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 8, var_decl_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "var_decl"


    // $ANTLR start "var_type"
    // src/Little.g:51:1: var_type : ( 'FLOAT' | 'INT' );
    public final void var_type() throws RecognitionException {
        int var_type_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return ; }
            // src/Little.g:52:2: ( 'FLOAT' | 'INT' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==17) ) {
                alt4=1;
            }
            else if ( (LA4_0==18) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/Little.g:52:4: 'FLOAT'
                    {
                    if ( state.backtracking==0 ) {
                      System.out.println("var_type");
                    }
                    match(input,17,FOLLOW_17_in_var_type210); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/Little.g:53:13: 'INT'
                    {
                    match(input,18,FOLLOW_18_in_var_type214); if (state.failed) return ;

                    }
                    break;

            }
        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 9, var_type_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "var_type"


    // $ANTLR start "any_type"
    // src/Little.g:56:1: any_type : ( var_type | 'VOID' );
    public final void any_type() throws RecognitionException {
        int any_type_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return ; }
            // src/Little.g:57:2: ( var_type | 'VOID' )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=17 && LA5_0<=18)) ) {
                alt5=1;
            }
            else if ( (LA5_0==19) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src/Little.g:57:4: var_type
                    {
                    if ( state.backtracking==0 ) {
                      System.out.println("any_type");
                    }
                    pushFollow(FOLLOW_var_type_in_any_type229);
                    var_type();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/Little.g:58:14: 'VOID'
                    {
                    match(input,19,FOLLOW_19_in_any_type233); if (state.failed) return ;

                    }
                    break;

            }
        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 10, any_type_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "any_type"


    // $ANTLR start "id_list"
    // src/Little.g:61:1: id_list : id ( ',' id )* ;
    public final void id_list() throws RecognitionException {
        int id_list_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 11) ) { return ; }
            // src/Little.g:62:2: ( id ( ',' id )* )
            // src/Little.g:62:4: id ( ',' id )*
            {
            if ( state.backtracking==0 ) {
              System.out.println("id_list");
            }
            pushFollow(FOLLOW_id_in_id_list250);
            id();

            state._fsp--;
            if (state.failed) return ;
            // src/Little.g:63:6: ( ',' id )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==20) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src/Little.g:63:7: ',' id
            	    {
            	    match(input,20,FOLLOW_20_in_id_list253); if (state.failed) return ;
            	    pushFollow(FOLLOW_id_in_id_list255);
            	    id();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 11, id_list_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "id_list"


    // $ANTLR start "param_decl_list"
    // src/Little.g:68:1: param_decl_list : var_type id ( ',' var_type id )* ;
    public final void param_decl_list() throws RecognitionException {
        int param_decl_list_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 12) ) { return ; }
            // src/Little.g:69:2: ( var_type id ( ',' var_type id )* )
            // src/Little.g:69:4: var_type id ( ',' var_type id )*
            {
            if ( state.backtracking==0 ) {
              System.out.println("param_decl_list");
            }
            pushFollow(FOLLOW_var_type_in_param_decl_list276);
            var_type();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_id_in_param_decl_list278);
            id();

            state._fsp--;
            if (state.failed) return ;
            // src/Little.g:70:15: ( ',' var_type id )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==20) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/Little.g:70:16: ',' var_type id
            	    {
            	    match(input,20,FOLLOW_20_in_param_decl_list281); if (state.failed) return ;
            	    pushFollow(FOLLOW_var_type_in_param_decl_list283);
            	    var_type();

            	    state._fsp--;
            	    if (state.failed) return ;
            	    pushFollow(FOLLOW_id_in_param_decl_list285);
            	    id();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 12, param_decl_list_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "param_decl_list"


    // $ANTLR start "func_declarations"
    // src/Little.g:74:1: func_declarations : ( func_decl )* ;
    public final void func_declarations() throws RecognitionException {
        int func_declarations_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 13) ) { return ; }
            // src/Little.g:75:2: ( ( func_decl )* )
            // src/Little.g:75:4: ( func_decl )*
            {
            // src/Little.g:75:4: ( func_decl )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==21) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/Little.g:75:5: func_decl
            	    {
            	    pushFollow(FOLLOW_func_decl_in_func_declarations302);
            	    func_decl();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 13, func_declarations_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "func_declarations"


    // $ANTLR start "func_decl"
    // src/Little.g:77:1: func_decl : 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END' ;
    public final void func_decl() throws RecognitionException {
        int func_decl_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 14) ) { return ; }
            // src/Little.g:78:2: ( 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END' )
            // src/Little.g:78:4: 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END'
            {
            if ( state.backtracking==0 ) {
              System.out.println("func_decl");
            }
            match(input,21,FOLLOW_21_in_func_decl318); if (state.failed) return ;
            pushFollow(FOLLOW_any_type_in_func_decl320);
            any_type();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_id_in_func_decl322);
            id();

            state._fsp--;
            if (state.failed) return ;
            match(input,22,FOLLOW_22_in_func_decl324); if (state.failed) return ;
            // src/Little.g:79:30: ( param_decl_list )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( ((LA9_0>=17 && LA9_0<=18)) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // src/Little.g:79:31: param_decl_list
                    {
                    pushFollow(FOLLOW_param_decl_list_in_func_decl327);
                    param_decl_list();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            match(input,23,FOLLOW_23_in_func_decl331); if (state.failed) return ;
            match(input,12,FOLLOW_12_in_func_decl333); if (state.failed) return ;
            pushFollow(FOLLOW_func_body_in_func_decl335);
            func_body();

            state._fsp--;
            if (state.failed) return ;
            match(input,13,FOLLOW_13_in_func_decl337); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 14, func_decl_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "func_decl"


    // $ANTLR start "func_body"
    // src/Little.g:81:1: func_body : decl stmt_list ;
    public final void func_body() throws RecognitionException {
        int func_body_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 15) ) { return ; }
            // src/Little.g:82:2: ( decl stmt_list )
            // src/Little.g:82:4: decl stmt_list
            {
            if ( state.backtracking==0 ) {
              System.out.println("func_body");
            }
            pushFollow(FOLLOW_decl_in_func_body352);
            decl();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_stmt_list_in_func_body354);
            stmt_list();

            state._fsp--;
            if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 15, func_body_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "func_body"


    // $ANTLR start "stmt_list"
    // src/Little.g:87:1: stmt_list : ( stmt )* ;
    public final void stmt_list() throws RecognitionException {
        int stmt_list_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 16) ) { return ; }
            // src/Little.g:88:2: ( ( stmt )* )
            // src/Little.g:88:4: ( stmt )*
            {
            if ( state.backtracking==0 ) {
              System.out.println("stmt_list");
            }
            // src/Little.g:89:3: ( stmt )*
            loop10:
            do {
                int alt10=2;
                alt10 = dfa10.predict(input);
                switch (alt10) {
            	case 1 :
            	    // src/Little.g:89:4: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_stmt_list372);
            	    stmt();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 16, stmt_list_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "stmt_list"


    // $ANTLR start "stmt"
    // src/Little.g:91:1: stmt : ( read_stmt | write_stmt | return_stmt | assign_stmt | if_stmt | do_stmt );
    public final void stmt() throws RecognitionException {
        int stmt_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 17) ) { return ; }
            // src/Little.g:92:2: ( read_stmt | write_stmt | return_stmt | assign_stmt | if_stmt | do_stmt )
            int alt11=6;
            switch ( input.LA(1) ) {
            case 24:
                {
                alt11=1;
                }
                break;
            case 25:
                {
                alt11=2;
                }
                break;
            case 26:
                {
                alt11=3;
                }
                break;
            case IDENTIFIER:
                {
                alt11=4;
                }
                break;
            case 31:
                {
                alt11=5;
                }
                break;
            case 39:
                {
                alt11=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                throw nvae;
            }

            switch (alt11) {
                case 1 :
                    // src/Little.g:92:4: read_stmt
                    {
                    if ( state.backtracking==0 ) {
                      System.out.println("stmt");
                    }
                    pushFollow(FOLLOW_read_stmt_in_stmt388);
                    read_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/Little.g:93:15: write_stmt
                    {
                    pushFollow(FOLLOW_write_stmt_in_stmt392);
                    write_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // src/Little.g:93:28: return_stmt
                    {
                    pushFollow(FOLLOW_return_stmt_in_stmt396);
                    return_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // src/Little.g:93:42: assign_stmt
                    {
                    pushFollow(FOLLOW_assign_stmt_in_stmt400);
                    assign_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // src/Little.g:93:56: if_stmt
                    {
                    pushFollow(FOLLOW_if_stmt_in_stmt404);
                    if_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 6 :
                    // src/Little.g:93:66: do_stmt
                    {
                    pushFollow(FOLLOW_do_stmt_in_stmt408);
                    do_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 17, stmt_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "stmt"


    // $ANTLR start "assign_stmt"
    // src/Little.g:97:1: assign_stmt : id ':=' expr ';' ;
    public final void assign_stmt() throws RecognitionException {
        int assign_stmt_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 18) ) { return ; }
            // src/Little.g:98:2: ( id ':=' expr ';' )
            // src/Little.g:98:4: id ':=' expr ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("assign_stmt");
            }
            pushFollow(FOLLOW_id_in_assign_stmt426);
            id();

            state._fsp--;
            if (state.failed) return ;
            match(input,15,FOLLOW_15_in_assign_stmt428); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_assign_stmt430);
            expr();

            state._fsp--;
            if (state.failed) return ;
            match(input,16,FOLLOW_16_in_assign_stmt432); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 18, assign_stmt_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "assign_stmt"


    // $ANTLR start "read_stmt"
    // src/Little.g:101:1: read_stmt : 'READ' '(' id_list ')' ';' ;
    public final void read_stmt() throws RecognitionException {
        int read_stmt_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 19) ) { return ; }
            // src/Little.g:102:2: ( 'READ' '(' id_list ')' ';' )
            // src/Little.g:102:4: 'READ' '(' id_list ')' ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("read_stmt");
            }
            match(input,24,FOLLOW_24_in_read_stmt446); if (state.failed) return ;
            match(input,22,FOLLOW_22_in_read_stmt448); if (state.failed) return ;
            pushFollow(FOLLOW_id_list_in_read_stmt450);
            id_list();

            state._fsp--;
            if (state.failed) return ;
            match(input,23,FOLLOW_23_in_read_stmt452); if (state.failed) return ;
            match(input,16,FOLLOW_16_in_read_stmt454); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 19, read_stmt_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "read_stmt"


    // $ANTLR start "write_stmt"
    // src/Little.g:105:1: write_stmt : 'WRITE' '(' id_list ')' ';' ;
    public final void write_stmt() throws RecognitionException {
        int write_stmt_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 20) ) { return ; }
            // src/Little.g:106:2: ( 'WRITE' '(' id_list ')' ';' )
            // src/Little.g:106:4: 'WRITE' '(' id_list ')' ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("write_stmt");
            }
            match(input,25,FOLLOW_25_in_write_stmt468); if (state.failed) return ;
            match(input,22,FOLLOW_22_in_write_stmt470); if (state.failed) return ;
            pushFollow(FOLLOW_id_list_in_write_stmt472);
            id_list();

            state._fsp--;
            if (state.failed) return ;
            match(input,23,FOLLOW_23_in_write_stmt474); if (state.failed) return ;
            match(input,16,FOLLOW_16_in_write_stmt476); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 20, write_stmt_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "write_stmt"


    // $ANTLR start "return_stmt"
    // src/Little.g:109:1: return_stmt : 'RETURN' expr ';' ;
    public final void return_stmt() throws RecognitionException {
        int return_stmt_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 21) ) { return ; }
            // src/Little.g:110:2: ( 'RETURN' expr ';' )
            // src/Little.g:110:4: 'RETURN' expr ';'
            {
            if ( state.backtracking==0 ) {
              System.out.println("return_stmt");
            }
            match(input,26,FOLLOW_26_in_return_stmt490); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_return_stmt492);
            expr();

            state._fsp--;
            if (state.failed) return ;
            match(input,16,FOLLOW_16_in_return_stmt494); if (state.failed) return ;

            }

        }
             finally {
            if ( state.backtracking>0 ) { memoize(input, 21, return_stmt_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "return_stmt"


    // $ANTLR start "expr"
    // src/Little.g:115:1: expr : factor ( addop factor )* ;
    public final void expr() throws RecognitionException {
        int expr_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 22) ) { return ; }
            // src/Little.g:116:2: ( factor ( addop factor )* )
            // src/Little.g:116:4: factor ( addop factor )*
            {
            pushFollow(FOLLOW_factor_in_expr507);
            factor();

            state._fsp--;
            if (state.failed) return ;
            // src/Little.g:116:11: ( addop factor )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0>=27 && LA12_0<=28)) ) {
                    alt12=1;
                }

